--- a/main2.ipynb
+++ b/main2.ipynb
@@ -43,7 +43,7 @@
     "# Import data\n",
     "df = pd.read_csv('artist_related_tracks.csv')\n",
     "#hola\n",
-    "#jgjkgj"
+    "#juan"
    ]
   },
   {
