--- a/main2.ipynb
+++ b/main2.ipynb
@@ -41,9 +41,7 @@
    "outputs": [],
    "source": [
     "# Import data\n",
-    "df = pd.read_csv('artist_related_tracks.csv')\n",
-    "#hola\n",
-    "#juan"
+    "df = pd.read_csv('artist_related_tracks.csv')\n"
    ]
   },
   {
