--- a/main.ipynb
+++ b/main.ipynb
@@ -1,18 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Procesamiento de datos de Spotify: Reguetón en Colombia\n",
+    "\n",
+    "## Introducción \n",
+    "\n",
+    "Este conjunto de datos fue creado a partir de los datos que encontramos en la API de spotify, hicimos un preprocesamiento donde se pudo extraer una base de datos unificada de ciertos artistas del género del reguetón con sus canciones más escuchadas en Colombia. \n",
+    "\n",
+    "el procesamiento de los datos como la extracción de artistas relacionados o las canciones más populares está a cargo del algoritmo interno de Spotify. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importación de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Importamos librerías\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
