--- a/main.ipynb
+++ b/main.ipynb
@@ -8,10 +8,11 @@
     "\n",
     "## Introducción \n",
     "\n",
-    "Este conjunto de datos fue creado a partir de los datos que encontramos en la API de spotify, hicimos un preprocesamiento donde se pudo extraer una base de datos unificada de ciertos artistas del género del reguetón con sus canciones más escuchadas en Colombia. \n",
+    "Este conjunto de datos fue creado a partir de los datos que encontramos en la API de Spotify, hicimos un preprocesamiento donde se pudo extraer una base de datos unificada de ciertos artistas del género del reguetón con sus canciones más escuchadas en Colombia. \n",
     "\n",
-    "el procesamiento de los datos como la extracción de artistas relacionados o las canciones más populares está a cargo del algoritmo interno de Spotify. \n",
-    "\n"
+    "El procesamiento de los datos como la extracción de artistas relacionados o las canciones más populares está a cargo del algoritmo interno de Spotify. \n",
+    "\n",
+    "El objetivo de este EDA es comparar el compor"
    ]
   },
   {
