--- a/main2.ipynb
+++ b/main2.ipynb
@@ -45,6 +45,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta base de datos va a ser utilizada para describir y comparar "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
