--- a/main2.ipynb
+++ b/main2.ipynb
@@ -901,6 +901,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En esta gráfica encontramos la correlación entre cada una de las variables de nuestra base de datos, como no estan correlacionadas, cada uno de los datos es importante"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
