--- a/main2.ipynb
+++ b/main2.ipynb
@@ -904,7 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En esta gráfica encontramos la correlación entre cada una de las variables de nuestra base de datos, como no estan correlacionadas, cada uno de los datos es importante"
+    "En esta gráfica encontramos la correlación entre cada una de las variables de nuestra base de datos, como no estan correlacionadas, cada uno de los datos es importante."
    ]
   },
   {
