--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "El procesamiento de los datos como la extracción de artistas relacionados o las canciones más populares está a cargo del algoritmo interno de Spotify. \n",
     "\n",
-    "El objetivo de este EDA es comparar el compor"
+    "El objetivo de este EDA es comparar el comportamiento del reguetón en los últimos 10 años."
    ]
   },
   {
@@ -68,6 +68,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Análisis de patrones de características individuales mediante visualización\n",
+    "\n",
     "Vamos a examinar los datos para ver cómo están organizados."
    ]
   },
@@ -102,6 +104,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análisis estadístico descriptivo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -109,6 +118,20 @@
    "source": [
     "# Vamos a examinar la distribución de las variables numéricas\n",
     "df.hist(figsize=(20, 10), bins=50, xlabelsize=8, ylabelsize=8);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conceptos básicos de agrupación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlación y causalidad"
    ]
   }
  ],
