--- a/main.ipynb
+++ b/main.ipynb
@@ -282,7 +282,7 @@
    ],
    "source": [
     "# Vemos la información del dataset\n",
-    "df.info()"
+    "df.info() # Para el Dtype "
    ]
   },
   {
@@ -330,9 +330,9 @@
     }
    ],
    "source": [
-    "import ast # Importamos ast para convertir el literal a diccionario\n",
+    "import ast # Importamos ast para convertir el literal a diccionario (Estructura de datos)\n",
     "\n",
-    "df['audio_features'] = df['audio_features'].apply(ast.literal_eval) # Realizamos la conversión\n",
+    "df['audio_features'] = df['audio_features'].apply(ast.literal_eval) # Realizamos la conversión ast string a dicc\n",
     "\n",
     "df.audio_features[0] # Verificamos los resultados con el primer diccionario del dataset"
    ]
@@ -632,7 +632,7 @@
     }
    ],
    "source": [
-    "# Realizamos el explode de las columnas del diccionario\n",
+    "# Realizamos el explode de las columnas del diccionario (De lista a columnas, apply es aplicar una funcion para una columna, lambda es una funcion y busca x en el diccionario)\n",
     "# 'danceability', 'energy', 'loudness', 'speechiness', 'acousticness', 'instrumentalness','liveness', 'valence', 'tempo'\n",
     "\n",
     "\n",
@@ -646,7 +646,7 @@
     "df['valence'] = df['audio_features'].apply(lambda x: x['valence'])\n",
     "df['tempo'] = df['audio_features'].apply(lambda x: x['tempo'])\n",
     "\n",
-    "# Eliminamos la columna original\n",
+    "# Eliminamos la columna original (axis colum inplace=borre de base de datos)\n",
     "df.drop('audio_features', axis=1, inplace=True)\n",
     "\n",
     "# Vemos los primeros 10 registros\n",
@@ -733,15 +733,8 @@
     }
    ],
    "source": [
-    "print(df)"
+    "print(df) # Head grande"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -779,7 +772,7 @@
    "source": [
     "### Conclusión \n",
     "\n",
-    "Encontramos un gran desbalanceo de datos entre los años 2007-2011, así que vamos a limitar el tiempo de análisis desde 2012"
+    "Encontramos un gran desbalanceo de datos entre los años 2007-2011, así que vamos a limitar el tiempo de análisis desde 2012."
    ]
   },
   {
@@ -903,7 +896,7 @@
     }
    ],
    "source": [
-    "df.groupby(['year', 'artist_name']).size().unstack().plot(kind='bar', figsize=(20,10))\n",
+    "df.groupby(['year', 'artist_name']).size().unstack().plot(kind='bar', figsize=(20,10)) #Groupby = 1 Feid\n",
     "plt.title('Artistas por año')\n",
     "plt.savefig('artistas_por_año_corregido.png')"
    ]
@@ -1151,7 +1144,7 @@
    "source": [
     "## Conclusiones \n",
     "\n",
-    "Tenemos variables que siguen distribuciones normales o normalizables, y que se prestan para un correcto análisis de datos.\n",
+    "Tenemos variables que siguen distribuciones normales  y que se prestan para un correcto análisis de datos.\n",
     "\n"
    ]
   },
@@ -1227,8 +1220,6 @@
    ],
    "source": [
     "# Estandarización de todas las variables para que queden parecidos y no negativas\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Estandarización entre 0-1\n",
     "\n",
@@ -1678,7 +1669,11 @@
    "source": [
     "Aqui podemos observar poca correlación entre las variables, esto significa que las variables son informativas, y que todas son necesarias para analizar la música de reguetón. \n",
     "\n",
-    "En Energy y Loudness podemos ver una correlación media (0.65) y esto lo que nos dice es que el cálculo que hace Spotify para Energy tiene en cuenta el loudness como parámetro."
+    "En energy y loudness podemos ver una correlación media (0.65) y esto lo que nos dice es que el cálculo que hace Spotify para Energy tiene en cuenta el loudness como parámetro.\n",
+    "\n",
+    "##Conclusión \n",
+    "\n",
+    "existen tendencias- en el analisis del tiempo si existen variables que se mueven al mismo tiempo y en la misma direccion a pesar de que no se correlacionen"
    ]
   }
  ],
